# superpsx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.debug  README.ai.md  README.md  STATUS  analyze.py  compare_vram.py  debug_colors.py  disasm.py  linkfile  patch.diff  pcsx2_log.txt  run_test.txt  superpsx.elf  superpsx.ini  superpsx_improvement_analysis.md  test_packet.c
.ai/: assistant-config.yaml
.github/: copilot-instructions.md
.github/workflows/: CI.yml
cmake/: extract_vutext.py  run_pcsx2.cmake  run_ppsspp.cmake
docs/: gprof_analysis.md  gpu_performance_audit.md  jit_optimization_roadmap.md  optimization_audit.md  psp_gpu_comparison.md
include/: audio_backend.h  config.h  gpu_backend.h  gpu_state.h  interpreter.h  iso_fs.h  iso_image.h  joystick.h  osd.h  platform.h  profiler.h  psx_dma.h  psx_sio.h  psx_timers.h  psx_timing.h  scheduler.h  spu.h  superpsx.h
isos/CrashBandicoot/: CrashBandicoot.cue
isos/MortalKombat2JP/: MortalKombat2JP.cue
src/: bios_data.c  cdrom.c  config.c  cpu.c  dma.c  dynarec.c  dynarec.h  dynarec_cache.c  dynarec_compile.c  dynarec_emit.c  dynarec_gte.c  dynarec_insn.c  dynarec_memory.c  dynarec_run.c  gpu_commands.c  gpu_core.c  gpu_dma.c  gpu_gif.c  gpu_primitives.c  gpu_stub.c  gpu_texture.c  gpu_vram.c  graphics.c  gte.c  hardware.c  init.c  interpreter.c  iso_fs.c  iso_image.c  joystick.c  loader.c  loader.h  main.c  memory.c  osd.c  profiler.c  scheduler.c  sio.c  spu.c  superpsx.h  (+3 more)
src/platform/ps2/: audio_ps2_backend.c  gpu_ps2_backend.c  gpu_ps2_core.c  gpu_ps2_dma.c  gpu_ps2_gif.c  gpu_ps2_primitives.c  gpu_ps2_state.h  gpu_ps2_texture.c  gpu_ps2_vram.c  joystick_ps2.c  main_ps2.c  osd_ps2.c  platform_ps2.c  vu0_micro_ps2.c  vu0_micro_ps2.h
src/platform/ps2/vu0/: mvmva_core.vsm  mvmva_full.vsm
src/platform/psp/: audio_psp_backend.c  gpu_psp_backend.c  gpu_psp_core.c  gpu_psp_dma.c  gpu_psp_primitives.c  gpu_psp_state.h  gpu_psp_texture.c  gpu_psp_vram.c  gte_vfpu.c  gte_vfpu.h  joystick_psp.c  main_psp.c  osd_psp.c  platform_psp.c  vu0_micro_psp.c
tests/jit/: playground.h  playground_main.c  playground_tests.c  test_alu.c  test_block.c  test_branch.c  test_dirty.c  test_expansion.c  test_memory.c  test_vu0_micro.c
tests/playground_gpu/: mocks.c  playground_gpu.h  playground_main.c  test_clut.c  test_dma_block.c  test_expansion_gp1.c  test_expansion_gpu.c  test_state.c  test_texcache.c
tests/sio/: test_cycle_counting.c  test_sio_timing.c
tools/: Makefile.test  README.md  VRAM_VIEWER_README.md  analyze_clip_boundary.py  analyze_clip_extra.py  analyze_diff.py  analyze_diff8.py  analyze_line.py  analyze_mask.py  analyze_overflow.py  analyze_overlap.py  analyze_polygon.py  analyze_polygon_miss.py  analyze_rects.py  analyze_semitrans.py  analyze_texrect.py  analyze_texrect_color.py  batch_vram_viewer.py  categorize_diffs.py  check_bg.py  check_bios_progression.py  check_bios_render.py  check_blend.py  check_dither.py  check_fullscreen.py  check_gradient.py  check_pixels.py  check_semitrans_raw.py  check_texture.py  check_vram_regions.py  check_vram_tex.py  check_wrap.py  compare_15_clut.py  compare_detailed.py  compare_tex_rect.py  compare_vram.py  debug_compare.c  disasm_overlap.py  find_texture.py  full_breakdown.py  (+14 more)
